More possible fixes for mac